--- a/clase42/package.json
+++ b/clase42/package.json
@@ -14,11 +14,13 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.6.0"
   }
 }
