--- a/clase54/desafio/.env.example
+++ b/clase54/desafio/.env.example
@@ -1,7 +1,1 @@
-PORT="3031"
-HOST="localhost"
-DB_USERNAME="root"
-DB_PASSWORD=""
-DB_DATABASE="movies_db"
-DB_HOST="localhost"
-DB_MOTOR="mysql"
+VITE_API_MOVIES="http://localhost:3031/api"
